syntax = "proto3";

package grpc;

option java_package = "com.grpc.empuje_comunitario.proto";
option java_multiple_files = true;

message GenericResponse {
  bool success = 1;
  string message = 2;
}
